Fix navbar menu overlap

--- a/src/scss/common/_navbar.scss
+++ b/src/scss/common/_navbar.scss
@@ -72,7 +72,6 @@ $menu-height-large: rem(60);
 .btn-navbar-toggle {
   line-height: rem(54 - 22);
   margin: 11px;
-  padding: 0 22px;
   color: $white;
   z-index: 1;
 
